# linkedin-relationship-intelligence

./: .gitignore  pyproject.toml  replit.md
app/: ai.py  auth.py  database.py  linkedin.py  main.py  models.py  notify.py  phantom.py  scheduler.py  slack.py
app/static/: app.js  style.css
app/templates/: dashboard.html  login.html
